视图引擎测试开始编写

--- a/index.html
+++ b/index.html
@@ -2,9 +2,124 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>视图渲染</title>
 </head>
 <body>
+<script type="text/javascript" src="dist/frontLarge.js"></script>
+<script type="text/javascript">
 
+
+
+    window.addEventListener('load',function () {
+        var sDate=Date.now(),
+            htmlStr=document.querySelector('script[type="text/template"]').textContent;
+
+        var vDom=FL.viewEngin.html2vdom(htmlStr);
+        
+        console.log(Date.now()-sDate);
+
+    })
+
+</script>
+<script type="text/template">
+    <div class="grid-table">
+        <div class="grid-table-left-wrap">
+            <div class="grid-table-left">
+                <div class="grid-header-group">
+                    <ul class="grid-header-row">
+                        <li $-for=" actionData in gridConf.leftColsModel">
+                            <template config="actionData.titleConfig|colHeaderHandle:[$,actionData.name]"></template>
+                        </li>
+                    </ul>
+                </div>
+                <div class="grid-row-group" $-on:mouseout="eventManage.bodyMouseout"
+                     $-render="eles|setContainer:[$,'leftContainer']">
+                    <ul class="grid-body-row" $-for="(rowKey ,rowData ) in gridListData"
+                        $-on:click="eventManage.rowClick(rowKey,rowData)"
+                        $-on:mouseover="eventManage.rowHover(rowKey,rowData)"
+                        $-class="{row-hover:gridConf.rowHoverIndex == rowKey }">
+                        <li $-for="(actionKey , actionData) in gridConf.leftColsModel">
+                            <template
+                                    config="actionData.listConfig|colDataHandle:[$,rowData,rowKey,actionData.field,gridListData,eles]"></template>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="grid-table-right-wrap">
+            <div class="grid-table-right">
+                <div class="grid-header-group">
+                    <ul class="grid-header-row">
+                        <li class="content-center" $-class="{desc:colModel.order == 'desc',asc:colModel.order == 'asc'}"
+                            $-on:click="eventManage.headerClick(colKey,colModel)"
+                            $-for=" ( colKey , colModel ) in gridConf.colsModel">
+                            <strong $-if="!colModel.titleConfig.template">{{colModel.titleConfig.content ||
+                                colModel.name ||""}}</strong>
+                            <template config="colModel.titleConfig"></template>
+                            <span $-if="colModel.order" $-show="gridConf.orderIndex == colKey "><i
+                                    class="iconfont icon-down-copy-asc"></i><i
+                                    class="iconfont icon-down-copy-desc"></i></span></li>
+                    </ul>
+                </div>
+                <div class="grid-row-group" $-on:mouseout="eventManage.bodyMouseout"
+                     $-render="eles|setContainer:[$,'rightContainer']">
+                    <ul class="grid-body-row" $-for="(rowKey , rowData) in gridListData"
+                        $-on:click="eventManage.rowClick(rowKey,rowData)"
+                        $-on:mouseover="eventManage.rowHover(rowKey,rowData)"
+                        $-class="{row-hover:gridConf.rowHoverIndex == rowKey }">
+                        <li $-for=" ( colKey , colModel ) in gridConf.colsModel"
+                            $-render="eventManage.render(rowKey,colKey)">
+                            <template
+                                    config="colModel.listConfig|colDataHandle:[$,rowData,rowKey,colModel.field,gridListData,eles]"></template>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="grid-empty" $-if="gridListData|rowsEmpty:[$,loading]">
+        <h3><i class="iconfont icon-tttt"></i>暂无数据</h3>
+    </div>
+    <div class="grid-loading" $-class="{}" $-if="!!loading"><p><span class="loading-spinners dots"></span>
+        <p>加载中<span class="loading-spinners"></span></p>
+    </div>
+    <div class="grid-footer">
+        <ul>
+            <li class="footer-left">
+                <ul class="grid-paging-left">
+                    <li $-on:click="eventManage.pageTurn(1)" $-class="{disabled:gridConf.pageNumber == 1}">首页</li>
+                </ul>
+                <ul class="grid-paging-center">
+                    <li $-on:click="eventManage.pageTurn(gridConf.pageNumber-1)"
+                        $-class="{disabled:gridConf.pageNumber == 1}"><i class="iconfont icon-left"></i></li>
+                    <li $-on:click="eventManage.pageTurn(pagingTag)" $-class="{focus:gridConf.pageNumber == pagingTag}"
+                        $-for="pagingTag in pagingListTag"><span>{{pagingTag}}</span></li>
+                    <li $-on:click="eventManage.pageTurn(gridConf.pageNumber+1)"
+                        $-class="{disabled:gridConf.pageNumber == pageCount}"><i class="iconfont icon-right"></i></li>
+                </ul>
+                <ul class="grid-paging-right">
+                    <li $-on:click="eventManage.pageTurn(pageCount)"
+                        $-class="{disabled:gridConf.pageNumber == pageCount}">
+                        尾页
+                    </li>
+                </ul>
+                <div class=toPage>第<input type="text" $-model="searchVal" $-valid="pageCount|searchValid"
+                                          name="pageNumber">页
+                    <button $-on:click="searchVal|toPage:[$,pageCount]" class="page-search">确定</button>
+                    共<strong>{{pageCount}}</strong>页
+                </div>
+            </li>
+            <li class="footer-right"><span class="split">每页</span>
+                <ul>
+                    <li $-for="size in gridConf.pageSizeList">
+                        <button $-on:click="eventManage.pageSize(size)" $-class="{focus:gridConf.pageSize == size}">
+                            {{size}}条
+                        </button>
+                    </li>
+                </ul>
+                <span>共<strong>{{dataCount}}</strong>条</span></li>
+        </ul>
+    </div>
+</script>
 </body>
 </html>
