路由与配置初步完成，后续核心引擎实现

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <list-gird conf="gridConf" for="gridConf in {listData:listData}.listData.data"></list-gird>
 
-    <a href="./sdfsdfsd?fdsf=we&age=18">fsdfsdfsd</a>
+    <a href="home.java?fdsf=we&age=18">fsdfsdfsd</a>
     <!--<div conf="gridConfs" for="gridConf in {listData:listData}.listData.data">-&#45;&#45;{{gridConf}}-&#45;&#45;</div>-->
     <!--<div for="gridConf in [listData][0].data">-&#45;&#45;{{gridConf}}-&#45;&#45;</div>-->
     <!--<strong>内容</strong>-->
