--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="pragma" content="no-cache">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>视图渲染</title>
+    <link type="text/css" rel="stylesheet" href="./project/comm/style/css/index.css"/>
 </head>
-<body class>
+<body>
 
-<div class="template">
-    <a href="home/index?fdsf=we&age=18">home.java</a>
-</div>
 
 <script type="text/javascript" src="dist/vf.js" app-config="./project/config/initConfig.js"></script>
 </body>
