grid标题已完成

--- a/index.b.html
+++ b/index.b.html
@@ -9,10 +9,10 @@
 <div class="template">
     <!--<h1>这是标题：{{pageDate.title+'-&#45;&#45;'}}sdfsd{{s|:co+'xiyuan'}}</h1>-->
 
-    <list-gird conf="listData.data"></list-gird>
+    <!--<list-gird conf="listData.data"></list-gird>-->
 
 
-    <!--<list-gird conf="gridConf" for="gridConf in {listData:listData}.listData.data"></list-gird>-->
+    <list-gird conf="gridConf" for="gridConf in {listData:listData}.listData.data"></list-gird>
 
     <a href="home.java?fdsf=we&age=18">fsdfsdfsd</a>
     <!--<div conf="gridConfs" for="gridConf in {listData:listData}.listData.data">-&#45;&#45;{{gridConf}}-&#45;&#45;</div>-->
